<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/add_event_page"
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__add_event"
				android:background="@drawable/_bg__add_event_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="800dp" />

			<RelativeLayout android:id="@+id/group_6"
				android:layout_marginTop="140dp"
				android:layout_marginStart="15dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/group_8"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_27"
						android:background="@drawable/rectangle_27_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="335dp"
						android:layout_height="58dp" />

					<ImageView android:id="@+id/rectangle_28"
						android:src="@drawable/rectangle_28"
						android:contentDescription="rectangle_28"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="12dp"
						android:layout_width="6dp"
						android:layout_height="35dp" />

				</RelativeLayout>

			</RelativeLayout>

			<TextView android:id="@+id/enter_title___"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="45dp"
				android:layout_marginTop="159dp"
				android:layout_width="99.6dp"
				android:layout_height="23.6dp"
				android:text="@string/enter_title____string"
				 />

			<TextView android:id="@+id/_10_00___10_30_am"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="297dp"
				android:layout_width="133.6dp"
				android:layout_height="23.6dp"
				android:text="@string/_10_00___10_30_am_string"
				 />

			<TextView android:id="@+id/on"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="341dp"
				android:layout_width="34.6dp"
				android:layout_height="23.6dp"
				android:text="@string/on_string"
				 />

			<TextView android:id="@+id/_24th_february_2024"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="255dp"
				android:layout_width="153.6dp"
				android:layout_height="23.6dp"
				android:text="@string/_24th_february_2024_string"
				 />

			<TextView android:id="@+id/notes__if_any_"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="514dp"
				android:layout_width="111.6dp"
				android:layout_height="23.6dp"
				android:text="@string/notes__if_any__string"
				 />

			<ImageView android:id="@+id/vector_13"
				android:src="@drawable/vector_13"
				android:contentDescription="vector_13"
				 android:layout_marginStart="30.5dp"
				android:layout_marginTop="482.5dp"
				android:layout_width="297.5dp"
				android:layout_height="0.5dp" />

			<TextView android:id="@+id/date"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="254dp"
				android:layout_width="47.6dp"
				android:layout_height="23.6dp"
				android:text="@string/date_string"
				 />

			<TextView android:id="@+id/time"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="297dp"
				android:layout_width="50.6dp"
				android:layout_height="23.6dp"
				android:text="@string/time_string"
				 />

			<TextView android:id="@+id/notification"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="340dp"
				android:layout_width="97.6dp"
				android:layout_height="23.6dp"
				android:text="@string/notification_string"
				 />

			<TextView android:id="@+id/memo_color"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="38dp"
				android:layout_marginTop="432dp"
				android:layout_width="100.6dp"
				android:layout_height="23.6dp"
				android:text="@string/memo_color_string"
				 />

			<View   android:id="@+id/rectangle_29"
				android:background="@drawable/rectangle_29_shape"
				 android:layout_marginStart="170dp"
				android:layout_marginTop="431dp"
				android:layout_width="21dp"
				android:layout_height="21dp" />

			<View   android:id="@+id/rectangle_30"
				android:background="@drawable/rectangle_30_shape"
				 android:layout_marginStart="207dp"
				android:layout_marginTop="431dp"
				android:layout_width="21dp"
				android:layout_height="21dp" />

			<View   android:id="@+id/rectangle_31"
				android:background="@drawable/rectangle_31_shape"
				 android:layout_marginStart="244dp"
				android:layout_marginTop="431dp"
				android:layout_width="21dp"
				android:layout_height="21dp" />

			<View   android:id="@+id/rectangle_32"
				android:background="@drawable/rectangle_32_shape"
				 android:layout_marginStart="281dp"
				android:layout_marginTop="430dp"
				android:layout_width="21dp"
				android:layout_height="21dp" />

			<TextView android:id="@+id/add_event"
				android:textSize="36sp"
				android:textColor="@color/_bg__status_bar_ek1_color"
				android:layout_marginLeft="41dp"
				android:layout_marginTop="72dp"
				android:layout_width="253.6dp"
				android:layout_height="47.6dp"
				android:text="@string/add_event_string"
				 />


			<RelativeLayout android:id="@+id/back"
				android:layout_marginTop="30dp"
				android:layout_marginStart="6dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__back_ek1"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="32dp"
					android:layout_height="48dp" />

				<ImageView
					android:id="@+id/vector_ek3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="6.5dp"
					android:layout_marginTop="17dp"
					android:contentDescription="vector_ek3"
					android:src="@drawable/vector_ek3" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_10"
				android:layout_marginTop="663dp"
				android:layout_marginStart="62dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>


				<RelativeLayout android:id="@+id/cta"
					android:layout_marginTop="0dp"
					android:layout_marginStart="168dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/shape"
						android:background="@drawable/shape_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="100dp"
						android:layout_height="40dp" />

					<TextView android:id="@+id/add"
						android:textStyle="bold"
						android:textSize="14sp"
						android:textColor="@color/add_color"
						android:layout_marginLeft="38dp"
						android:layout_marginTop="12dp"
						android:layout_width="39.4dp"
						android:layout_height="20.4dp"
						android:text="@string/add_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/delete"
					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/delete_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="12dp"
					android:layout_width="54.4dp"
					android:layout_height="20.4dp"
					android:text="@string/delete_string"
					 />

			</RelativeLayout>

			<TextView android:id="@+id/office"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="386dp"
				android:layout_width="56.6dp"
				android:layout_height="23.6dp"
				android:text="@string/office_string"
				 />

			<TextView android:id="@+id/location"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="385dp"
				android:layout_width="76.6dp"
				android:layout_height="23.6dp"
				android:text="@string/location_string"
				 />


			<RelativeLayout android:id="@+id/group_30"
				android:layout_marginTop="732dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_30_ek1"
					android:background="@drawable/_bg__group_30_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="68dp" />

				<View   android:id="@+id/rectangle_45"
					android:background="@drawable/rectangle_45_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="68dp" />

				<ImageView android:id="@+id/homeicon_1"
					android:src="@drawable/homeicon_1"
					android:contentDescription="homeicon_1"
					 android:layout_marginStart="162dp"
					android:layout_marginTop="16dp"
					android:layout_width="45dp"
					android:layout_height="37dp" />

				<ImageView android:id="@+id/profile_01_1"
					android:src="@drawable/profile_01_1"
					android:contentDescription="profile_01_1"
					 android:layout_marginStart="311dp"
					android:layout_marginTop="20dp"
					android:layout_width="29dp"
					android:layout_height="29dp" />

				<ImageView android:id="@+id/tasklist_1"
					android:src="@drawable/tasklist_1"
					android:contentDescription="tasklist_1"
					 android:layout_marginStart="248dp"
					android:layout_marginTop="23dp"
					android:layout_width="22dp"
					android:layout_height="24dp" />

				<ImageView android:id="@+id/teamsicon_01_1"
					android:src="@drawable/teamsicon_01_1"
					android:contentDescription="teamsicon_01_1"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="19dp"
					android:layout_width="31dp"
					android:layout_height="31dp" />

				<ImageView android:id="@+id/bellicon_01_1"
					android:src="@drawable/bellicon_01_1"
					android:contentDescription="bellicon_01_1"
					 android:layout_marginStart="92dp"
					android:layout_marginTop="20dp"
					android:layout_width="29dp"
					android:layout_height="29dp" />

			</RelativeLayout>

			<View
				android:id="@+id/_bg__group_8_ek1"
				android:layout_width="335dp"
				android:layout_height="58dp"
				android:layout_marginStart="-15dp"
				android:layout_marginTop="-140dp"
				android:background="@drawable/_bg__group_8_ek1_shape" />

			<View
				android:id="@+id/_bg__cta_ek1"
				android:layout_width="100dp"
				android:layout_height="623dp"
				android:layout_marginStart="-230dp"
				android:layout_marginTop="-663dp"
				android:background="@drawable/_bg__cta_ek1_shape" />

			<View
				android:id="@+id/_bg__group_6_ek1"
				android:layout_width="335dp"
				android:layout_height="58dp"
				android:layout_marginStart="-15dp"
				android:layout_marginTop="-140dp"
				android:background="@drawable/_bg__group_6_ek1_shape" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>