<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/project_task___edit" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__project_task___edit"
				android:background="@drawable/_bg__project_task___edit_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="800dp" />

			<ImageView
				android:id="@+id/vector2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="310dp"
				android:layout_marginTop="450.73dp"
				android:contentDescription="vector"
				android:src="@drawable/vector2" />





			<RelativeLayout android:id="@+id/group_6"
				android:layout_marginTop="140dp"
				android:layout_marginStart="15dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_6_ek1"
					android:background="@drawable/_bg__group_6_ek1_shape"
					 android:layout_marginStart="-15dp"
					android:layout_marginTop="-140dp"
					android:layout_width="335dp"
					android:layout_height="58dp" />


				<RelativeLayout android:id="@+id/group_8"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__group_8_ek1"
						android:background="@drawable/_bg__group_8_ek1_shape"
						 android:layout_marginStart="-15dp"
						android:layout_marginTop="-140dp"
						android:layout_width="335dp"
						android:layout_height="58dp" />

					<View   android:id="@+id/rectangle_27"
						android:background="@drawable/rectangle_27_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="335dp"
						android:layout_height="58dp" />

					<ImageView android:id="@+id/rectangle_28"
						android:src="@drawable/rectangle_28"
						android:contentDescription="rectangle_28"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="12dp"
						android:layout_width="6dp"
						android:layout_height="35dp" />

				</RelativeLayout>

			</RelativeLayout>

			<TextView android:id="@+id/enter_title___"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="45dp"
				android:layout_marginTop="159dp"
				android:layout_width="99.6dp"
				android:layout_height="23.6dp"
				android:text="@string/enter_title____string"
				 />

			<TextView android:id="@+id/_10_00___10_30_am"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="297dp"
				android:layout_width="133.6dp"
				android:layout_height="23.6dp"
				android:text="@string/_10_00___10_30_am_string"
				 />

			<TextView android:id="@+id/office"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="341dp"
				android:layout_width="56.6dp"
				android:layout_height="23.6dp"
				android:text="@string/office_string"
				 />

			<TextView android:id="@+id/_24th_february_2024"
				android:textSize="16sp"
				android:textColor="@color/_10_00___10_30_am_color"
				android:layout_marginLeft="171dp"
				android:layout_marginTop="255dp"
				android:layout_width="153.6dp"
				android:layout_height="23.6dp"
				android:text="@string/_24th_february_2024_string"
				 />

			<TextView android:id="@+id/notes__if_any_"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="40dp"
				android:layout_marginTop="526dp"
				android:layout_width="111.6dp"
				android:layout_height="23.6dp"
				android:text="@string/notes__if_any__string"
				 />

			<ImageView android:id="@+id/vector_13"
				android:src="@drawable/vector_13"
				android:contentDescription="vector_13"
				 android:layout_marginStart="31.5dp"
				android:layout_marginTop="494.5dp"
				android:layout_width="297.5dp"
				android:layout_height="0.5dp" />

			<TextView android:id="@+id/date"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="254dp"
				android:layout_width="47.6dp"
				android:layout_height="23.6dp"
				android:text="@string/date_string"
				 />

			<TextView android:id="@+id/time"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="297dp"
				android:layout_width="50.6dp"
				android:layout_height="23.6dp"
				android:text="@string/time_string"
				 />

			<TextView android:id="@+id/location"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="340dp"
				android:layout_width="76.6dp"
				android:layout_height="23.6dp"
				android:text="@string/location_string"
				 />

			<TextView android:id="@+id/completed"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="39dp"
				android:layout_marginTop="391dp"
				android:layout_width="92.6dp"
				android:layout_height="23.6dp"
				android:text="@string/completed_string"
				 />

			<TextView android:id="@+id/assigned_to"
				android:textSize="16sp"
				android:textColor="@color/enter_title____color"
				android:layout_marginLeft="38dp"
				android:layout_marginTop="448dp"
				android:layout_width="99.6dp"
				android:layout_height="23.6dp"
				android:text="@string/assigned_to_string"
				 />

			<TextView android:id="@+id/add_task"
				android:textSize="36sp"
				android:textColor="@color/_bg__status_bar_ek1_color"
				android:layout_marginLeft="41dp"
				android:layout_marginTop="72dp"
				android:layout_width="253.6dp"
				android:layout_height="47.6dp"
				android:text="@string/add_task_string"
				 />


			<RelativeLayout android:id="@+id/back"
				android:layout_marginTop="30dp"
				android:layout_marginStart="6dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>



				<ImageView android:id="@+id/vector_ek4"
					android:src="@drawable/vector_ek3"
					android:contentDescription="vector_ek4"
					 android:layout_marginStart="6.5dp"
					android:layout_marginTop="17dp"
					android:layout_width="8dp"
					android:layout_height="13.5dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/group_10"
				android:layout_marginTop="663dp"
				android:layout_marginStart="62dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_10_ek1"
					android:background="@drawable/_bg__group_10_ek1_shape"
					 android:layout_marginStart="-62dp"
					android:layout_marginTop="-663dp"
					android:layout_width="268dp"
					android:layout_height="40dp" />


				<RelativeLayout android:id="@+id/cta"
					android:layout_marginTop="0dp"
					android:layout_marginStart="168dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_bg__cta_ek1"
						android:background="@drawable/_bg__cta_ek1_shape"
						 android:layout_marginStart="-230dp"
						android:layout_marginTop="-663dp"
						android:layout_width="100dp"
						android:layout_height="40dp" />

					<View   android:id="@+id/shape"
						android:background="@drawable/shape_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="100dp"
						android:layout_height="40dp" />

					<TextView android:id="@+id/update"
						android:textStyle="bold"
						android:textSize="14sp"
						android:textColor="@color/update_color"
						android:layout_marginLeft="29dp"
						android:layout_marginTop="12dp"
						android:layout_width="58.4dp"
						android:layout_height="20.4dp"
						android:text="@string/update_string"
						 />

				</RelativeLayout>

				<TextView android:id="@+id/delete"
					android:textStyle="bold"
					android:textSize="14sp"
					android:textColor="@color/delete_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="12dp"
					android:layout_width="54.4dp"
					android:layout_height="20.4dp"
					android:text="@string/delete_string"
					 />

			</RelativeLayout>

			<View   android:id="@+id/rectangle_25"
				android:background="@drawable/rectangle_25_shape"
				 android:layout_marginStart="170.5dp"
				android:layout_marginTop="391.5dp"
				android:layout_width="20dp"
				android:layout_height="20dp" />


			<RelativeLayout android:id="@+id/group_29"
				android:layout_marginTop="732dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__group_29_ek1"
					android:background="@drawable/_bg__group_29_ek1_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="68dp" />

				<View   android:id="@+id/rectangle_45"
					android:background="@drawable/rectangle_45_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="68dp" />

				<ImageView android:id="@+id/homeicon_1"
					android:src="@drawable/homeicon_1"
					android:contentDescription="homeicon_1"
					 android:layout_marginStart="162dp"
					android:layout_marginTop="16dp"
					android:layout_width="45dp"
					android:layout_height="37dp" />

				<ImageView android:id="@+id/profile_01_1"
					android:src="@drawable/profile_01_1"
					android:contentDescription="profile_01_1"
					 android:layout_marginStart="311dp"
					android:layout_marginTop="20dp"
					android:layout_width="29dp"
					android:layout_height="29dp" />

				<ImageView android:id="@+id/tasklist_1"
					android:src="@drawable/tasklist_1"
					android:contentDescription="tasklist_1"
					 android:layout_marginStart="248dp"
					android:layout_marginTop="23dp"
					android:layout_width="22dp"
					android:layout_height="24dp" />

				<ImageView android:id="@+id/teamsicon_01_1"
					android:src="@drawable/teamsicon_01_1"
					android:contentDescription="teamsicon_01_1"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="19dp"
					android:layout_width="31dp"
					android:layout_height="31dp" />

				<ImageView android:id="@+id/bellicon_01_1"
					android:src="@drawable/bellicon_01_1"
					android:contentDescription="bellicon_01_1"
					 android:layout_marginStart="92dp"
					android:layout_marginTop="20dp"
					android:layout_width="29dp"
					android:layout_height="29dp" />

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>